# enterprise-analytics-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
airflow/: README.md
airflow/dags/: olist_data_quality_dag.py  olist_ingestion_dag.py  olist_pipeline_dag.py  olist_reporting_dag.py
api/: README.md  __init__.py  db.py  main.py
api/routers/: customers.py  dashboard.py  kpis.py  orders.py  products.py  revenue.py
api/schemas/: __init__.py  models.py
dashboards/: README.md
dbt/: README.md
dbt/olist/: dbt_project.yml  profiles.yml
dbt/olist/macros/: cents_to_reais.sql  generate_schema_name.sql
dbt/olist/seeds/: state_regions.csv
dbt/olist/tests/: assert_positive_revenue.sql
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.streamlit  README.md
docs/: api.md  architecture.md  er_diagram.md  excel.md  powerbi.md  streamlit.md
excel/: README.md
notebooks/: 01_eda_olist.ipynb  README.md
scripts/: README.md  load_postgres.py  run_sql_library.py
spark_jobs/: README.md  __init__.py  csv_to_parquet.py  run_all.py  session.py  transformations.py
sql/: README.md
sql/ddl/: 01_schema.sql  02_indexes.sql  03_views.sql
sql/dml/: load_star_schema.sql
sql/procedures/: procedures.sql
sql/queries/: 01_basics_and_aggregation.sql  02_window_functions.sql  03_ctes_and_recursive.sql  04_ranking_and_topn.sql  05_cohort_and_retention.sql  06_rfm_and_segmentation.sql  07_abc_rolling_and_advanced.sql  08_insights.sql
src/: README.md
src/eap/: __init__.py  cli.py
src/eap/config/: __init__.py  catalog.py  settings.py
src/eap/ingestion/: __init__.py  download.py  ingest.py
src/eap/quality/: __init__.py  expectations.py  validate.py
src/eap/utils/: __init__.py  io.py  logging.py
src/eap/warehouse/: __init__.py  build.py
streamlit/: README.md  app.py  data.py
streamlit/pages/: 1_Analytics.py  2_Customer_Search.py  3_Forecast.py  4_Insights.py
tests/: README.md  conftest.py
tests/integration/: test_api.py
tests/unit/: test_catalog.py  test_ingest.py  test_quality.py  test_warehouse.py
(+17 files in other folders)
