[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-analytics-platform"
version = "1.0.0"
description = "End-to-end Enterprise Retail Analytics Platform built on the Olist e-commerce dataset."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Enterprise Analytics Platform" }]
keywords = ["data-engineering", "analytics-engineering", "spark", "dbt", "airflow", "fastapi"]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "typer>=0.12",
    "requests>=2.31",
]

[project.optional-dependencies]
spark = ["pyspark>=3.5"]
quality = ["great-expectations>=0.18"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
app = ["streamlit>=1.33", "plotly>=5.20", "altair>=5.3"]
ml = ["scikit-learn>=1.4", "mlflow>=2.12", "statsmodels>=0.14"]
transform = ["dbt-core>=1.7", "dbt-duckdb>=1.7", "dbt-postgres>=1.7"]
orchestration = ["apache-airflow>=2.9"]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "black>=24.3",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "httpx2>=2.5",
]

[project.scripts]
eap = "eap.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "PTH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["eap"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=eap --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that touch external services (spark/db)",
]
